# gazettegram

./: .gitignore  README.md  config.py  gazette.py  persist.sqlite3  post_telegram.py  pyproject.toml  readme.md  sync.py  tg_job.py
api/: gazette_types.py  scraper.py
data/: filters.py  gazettedb.py
